fixed some capitalization

--- a/details/honors.tex
+++ b/details/honors.tex
@@ -18,7 +18,7 @@
   
   \cvhonor
     {USA Computing Olympiad (USACO)} % Award
-    {Platinum Division (top 5\% Nationally)}
+    {Platinum Division (top 5\% nationally)}
     {California, US} % Location
     {2016-18} % Date(s)
     
@@ -42,7 +42,7 @@
 
   \cvhonor
     {The National French Contest (Le Grand Concours)} % Award
-    {Gold Medal (top 5\% Nationally)}
+    {Gold Medal (top 5\% nationally)}
     {California, US} % Location
     {2016-17} % Date(s)
       
