--- a/details/education.tex
+++ b/details/education.tex
@@ -46,13 +46,13 @@
       }
 
     \cventry
-    {Certificate of Completion} % Degree
+    {Certificate of Completion (Clay Mathematics Institute)} % Degree
     {PROMYS Research Scholarship (Program in Mathematics for Young Scientists)} % Institution
     {Boston University} % Location
     {2017} % Date(s)    
     {
     \begin{cvitems}
-    \item One of 80 students, national and international selected in 2017 to do research in number theory at Boston University (six-week summer program) under the mentorship of professors and graduate students from universities such as MIT, Harvard, Princeton.
+    \item One of 80 students, national and international selected in 2017 to do research in number theory at Boston University (six-week summer program sponsored by the Clay Institute) under the mentorship of professors and graduate students from universities such as MIT, Harvard, Princeton.
     \end{cvitems}
     }
 
