made CCS more clear, added robotics experience, some rewording

--- a/details/projects.tex
+++ b/details/projects.tex
@@ -13,11 +13,11 @@
 %---------------------------------------------------------
   \cvskill
     {Linux Fake Webcam} % Category
-    {Wrote a multi-thousand line program in C to which allows the user to pretend they are someone else on any webcam chat. The program does this by inputing a video of someone performing a set of actions and as well as a JSON file with timestamps to the actions and transition between them. It provides the user with an interface they can use to smoothly and convincingly control the actions that appear on their webcam. It does this by using linux video libraries and a kernel module to allow piping video into the webcam device.} % Skills
+    {Wrote a multi-thousand line program in C which allows users to impersonate anybody on any webcam chat. The program does this by inputing a video and a corresponding JSON file with timestamps to the actions in the video and transition between them. The UI allows users to smoothly and convincingly control the actions that appear on their webcam. It does this by using linux video libraries and kernel modules to pipe video into the webcam device.} % Skills
 %---------------------------------------------------------
 \cvskill
     {Masterlock Combo Solver} % Category
-    {Built a robot which is able to unlock any master combination lock and output its combination by designing a custom breadboard circuit, 3D printing a frame, and assembling the motors with the circuitboard and frame.} % Skills
+    {Built a robot which is able to unlock any master combination lock and output its combination by designing a custom breadboard circuit, writing arduino code, 3D printing a frame, and assembling together with motors.} % Skills
 %---------------------------------------------------------
 \cvskill
   {Neural Network Game Bot}
