--- a/details/education.tex
+++ b/details/education.tex
@@ -10,7 +10,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {Computer Science B.S.} % Degree
+  {Computer Science BS, College of Creative Studies (CCS)} % Degree
     {University of Santa Barbara California} % Institution
     {Santa Barbara, California} % Location
     {2018-2022} % Date(s)    
@@ -30,7 +30,7 @@
     {
     \begin{cvitems}
     \item \textbf{4.44 (Weighted, top decile, SAT: 1530/1600, SAT Math II: 800/800)}
-    \item \textbf{AP Tests:} AP Computer Science A : 5, AP CSP: 5, AP AB/BC Calculus: 5, AP Biology: 5, AP Physics Mech: 4, AP Chem: 4, AP French: 5
+    \item \textbf{AP Tests: AP Computer Science A: 5}, AP CSP: 5, AP AB/BC Calculus: 5, AP Biology: 5, AP Physics Mech: 4, AP Chem: 4, AP French: 5
     \end{cvitems}
     }
 
