--- a/details/honors.tex
+++ b/details/honors.tex
@@ -23,8 +23,8 @@
     {2016-18} % Date(s)
     
   \cvhonor
-    {PiE Robotics Competition at UC Berkeley}  % Award
-    {1st place Award and Software/Sensors Award out of over 30 competing schools}
+    {1st Place Award PiE Robotics Competition at UC Berkeley}  % Award
+    {First Place Award and Software/Sensors Award out of 30+ schools. As president of Robotics Club, I have experience training a team in diverse areas of STEM, and leading them to victory. Skilled in wiring and programming arduinos, beaglebones, and reading hardware specs.}
     {California, US} % Location
     {2017-18} % Date(s)
 
