fixed typos, added to headline, spaced out projects

--- a/cv.tex
+++ b/cv.tex
@@ -72,7 +72,7 @@
 % \reddit{reddit-id}
 %\extrainfo{https://www.researchgate.net/profile/Khaled\_Ibrahim6}
 
-\quote{``A motivated computer scientist and ViM nerd with 5+ years of experience who is obsessed with high performance code/algorithms and enjoys building personal projects and hacks in C/C++."}
+\quote{``A motivated computer scientist and ViM nerd with 5+ years of experience who is obsessed with high performance code/algorithms and enjoys building personal projects and hacks in C/C++. I am looking to utilize and develop my skills at a Computer Science internship."}
 
 
 %-------------------------------------------------------------------------------
@@ -96,9 +96,9 @@
 %-------------------------------------------------------------------------------
 %\input{details/experience.tex}
 \input{details/education.tex}
+\input{details/skills.tex}
 \input{details/projects.tex}
 \input{details/honors.tex}
-\input{details/skills.tex}
 %\input{details/presentation.tex}
 %\input{details/writing.tex}
 %\input{details/committees.tex}
