--- a/details/honors.tex
+++ b/details/honors.tex
@@ -24,7 +24,7 @@
     
   \cvhonor
     {1st Place Award PiE Robotics Competition at UC Berkeley}  % Award
-    {First Place Award and Software/Sensors Award out of 30+ schools. As president of Robotics Club, I have experience training a team in diverse areas of STEM, and leading them to victory. Skilled in wiring and programming arduinos, beaglebones, and reading hardware specs.}
+    {First Place Award and Software/Sensors Award out of 30+ schools. As president of Robotics Club, I trained a team in different areas of STEM, and lead them to victory in competition. I gained skills in wiring and programming arduinos, beaglebones, and reading hardware specs.}
     {California, US} % Location
     {2017-18} % Date(s)
 
