--- a/details/projects.tex
+++ b/details/projects.tex
@@ -10,25 +10,30 @@
 %-------------------------------------------------------------------------------
 \begin{cvskills}
 
+  \vspace{1mm}
 %---------------------------------------------------------
   \cvskill
     {Linux Fake Webcam} % Category
-    {Wrote a multi-thousand line program in C which allows users to impersonate anybody on any webcam chat. The program does this by inputing a video and a corresponding JSON file with timestamps to the actions in the video and transition between them. The UI allows users to smoothly and convincingly control the actions that appear on their webcam. It does this by using linux video libraries and kernel modules to pipe video into the webcam device.} % Skills
+    {Wrote a multi-thousand line program in C which allows users to impersonate anybody on webcam chat. The program does this by inputing a video and a corresponding JSON file with timestamps to the actions in the video and transitions between them. The GUI allows users to smoothly and convincingly control the actions that appear on their webcam. It does this by using linux video libraries and kernel modules to pipe video into the webcam device.} % Skills
+  \vspace{1mm}
 %---------------------------------------------------------
 \cvskill
     {Masterlock Combo Solver} % Category
     {Built a robot which is able to unlock any master combination lock and output its combination by designing a custom breadboard circuit, writing arduino code, 3D printing a frame, and assembling together with motors.} % Skills
+  \vspace{1mm}
 %---------------------------------------------------------
 \cvskill
   {Neural Network Game Bot}
-  {Wrote an AI player in Javascript using neural networks and evolutionary learning algorithms. The bot learns by itself how to complete any level of a platformer game (similar to mario) given only the game controls and end destination.}
+  {Developed an AI player in Javascript using neural networks and evolutionary learning algorithms. The bot teaches itself how to complete any level of a platformer game (similar to mario) given only the game controls and end destination.}
+  \vspace{1mm}
 %---------------------------------------------------------
   \cvskill
     {Django Database \& Website} % Category
-    {Wrote a large database web application in Django used by Albany High School to organize anual freshmen debates.} % Skills
+    {Created a large database web application in Django used by Albany High School to organize anual freshmen debates.} % Skills
 %---------------------------------------------------------
   \cvskill
     {LISP interpreter in SNAP} % Category
-    {Wrote an program and environment in  SNAP (visual programming language created by UC Berkeley) in a clever attempt to loophole having to use SNAP for in-class project, and instead using a written language.} % Skills
+    {Designed an interpreter for LISP on top of SNAP (a visual programming language) in a clever attempt to loophole the requirement of using a visual language for in-class projects, and instead using a written language.} % Skills
+  \vspace{1mm}
 
 \end{cvskills}
