--- a/details/education.tex
+++ b/details/education.tex
@@ -18,19 +18,8 @@
     \begin{cvitems}
     %\item GPA: N/A 
     \item \textbf{Relevant Coursework:} Algorithms and Data Structures in C++, Unix Operating Systems Lab, Mathematics of Computer Science (Discrete Math \& Probability), Linear Algebra, Calculus III Multivariable Calculus.
-    \item 1 of 6 freshmen chosen to pursue research and an accelerated Computer Science courseload in College of Creative Studies.
-    \end{cvitems}
-    }
-
-  \cventry
-    {High School Diploma} % Degree
-    {Albany High School} % Institution
-    {Albany, California} % Location
-    {2014 - 2018} % Date(s)    
-    {
-    \begin{cvitems}
-    \item \textbf{4.44 (Weighted, top decile, SAT: 1530/1600, SAT Math II: 800/800)}
-    \item \textbf{AP Tests: AP Computer Science A: 5}, AP CSP: 5, AP AB/BC Calculus: 5, AP Biology: 5, AP Physics Mech: 4, AP Chem: 4, AP French: 5
+    \item \textbf{Standardized Tests - SAT: 1530/1600, SAT Math II: 800/800, AP Computer Science A: 5}
+    \item \textbf{1 of 6 freshmen} chosen to pursue research and an accelerated Computer Science courseload in College of Creative Studies.
     \end{cvitems}
     }
 
