elaborated M3 and USACO, fixed typos

--- a/cv.tex
+++ b/cv.tex
@@ -72,7 +72,7 @@
 % \reddit{reddit-id}
 %\extrainfo{https://www.researchgate.net/profile/Khaled\_Ibrahim6}
 
-\quote{``A motivated computer scientist and ViM nerd with 5+ years of experience who is obsessed with high performance code/algorithms and enjoys building personal projects and hacks in C/C++. I am looking to utilize and develop my skills at a Computer Science internship."}
+\quote{``A motivated computer scientist and ViM nerd with 5+ years of experience who is obsessed with high-performance code/algorithms and enjoys building personal projects and hacks in C/C++. I am looking to utilize and develop my skills at a Computer Science internship."}
 
 
 %-------------------------------------------------------------------------------
