--- a/details/honors.tex
+++ b/details/honors.tex
@@ -18,19 +18,19 @@
   
   \cvhonor
     {USA Computing Olympiad (USACO)} % Award
-    {Platinum Division (top 5\% nationally)}
+    {Platinum Division in Algorithms and Data Competition (top 5\% nationally)}
     {California, US} % Location
     {2016-18} % Date(s)
     
   \cvhonor
     {1st Place Award PiE Robotics Competition at UC Berkeley}  % Award
-    {First Place Award and Software/Sensors Award out of 30+ schools. As president of Robotics Club, I trained a team in different areas of STEM, and lead them to victory in competition. I gained skills in wiring and programming arduinos, beaglebones, and reading hardware specs.}
+    {First Place Award and Software/Sensors Award out of 30+ schools. As president of Robotics Club, I trained a team in different areas of STEM, and lead them to victory in competition. I gained skills in wiring and programming Arduinos, Beaglebones, and reading hardware specs.}
     {California, US} % Location
     {2017-18} % Date(s)
 
   \cvhonor
-    {Moody Mega Math Challenge} % Award
-    {Top 8\% paper award and \$1000 Scholarship (two-time winner nationally)}
+    {Moody Mega Math Modeling Challenge} % Award
+    {Data Modeling Paper Award and \$1000 Scholarship (top 8\% nationally)}
     {California, US} % Location
     {2017-18} % Date(s)
  
