--- a/details/projects.tex
+++ b/details/projects.tex
@@ -14,12 +14,12 @@
 %---------------------------------------------------------
   \cvskill
     {Linux Fake Webcam} % Category
-    {Wrote a multi-thousand line program in C which allows users to impersonate anybody on webcam chat. The program does this by inputing a video and a corresponding JSON file with timestamps to the actions in the video and transitions between them. The GUI allows users to smoothly and convincingly control the actions that appear on their webcam. It does this by using linux video libraries and kernel modules to pipe video into the webcam device.} % Skills
+    {Wrote a multi-thousand line program in C which allows users to impersonate anybody on webcam chat. The program does this by inputting a video and a corresponding JSON file with timestamps to the actions in the video and transitions between them. The GUI allows users to smoothly and convincingly control the actions that appear on their webcam. It does this by using linux video libraries and kernel modules to pipe video into the webcam device.} % Skills
   \vspace{1mm}
 %---------------------------------------------------------
 \cvskill
     {Masterlock Combo Solver} % Category
-    {Built a robot which is able to unlock any master combination lock and output its combination by designing a custom breadboard circuit, writing arduino code, 3D printing a frame, and assembling together with motors.} % Skills
+    {Built a robot which is able to unlock any master combination lock and output its combination by designing a custom breadboard circuit, writing Arduino code, 3D printing a frame, and assembling together with motors.} % Skills
   \vspace{1mm}
 %---------------------------------------------------------
 \cvskill
@@ -29,7 +29,7 @@
 %---------------------------------------------------------
   \cvskill
     {Django Database \& Website} % Category
-    {Created a large database web application in Django used by Albany High School to organize anual freshmen debates.} % Skills
+    {Created a large database web application in Django used by Albany High School to organize annual freshmen debates.} % Skills
 %---------------------------------------------------------
   \cvskill
     {LISP interpreter in SNAP} % Category
