added to skills

--- a/details/skills.tex
+++ b/details/skills.tex
@@ -18,7 +18,7 @@
 %---------------------------------------------------------
  \cvskill
     {Software} % Category
-    {Git, ViM, Linux Development, Eclipse, Matlab} % Skills
+    {Git, ViM, Linux Development, Eclipse, Matlab, Adobe Photoshop and Illustrator, Excel} % Skills
 
 %%---------------------------------------------------------
 %  \cvskill
