updated project descriptions and skills

--- a/details/projects.tex
+++ b/details/projects.tex
@@ -14,12 +14,12 @@
 %---------------------------------------------------------
   \cvskill
     {Linux Fake Webcam} % Category
-    {Wrote a multi-thousand line program in C which allows users to impersonate anybody on webcam chat. The program does this by inputting a video and a corresponding JSON file with timestamps to the actions in the video and transitions between them. The GUI allows users to smoothly and convincingly control the actions that appear on their webcam. It does this by using linux video libraries and kernel modules to pipe video into the webcam device.} % Skills
+    {Wrote a hacky program in C allowing users to impersonate anybody on webcam chat. The program inputs any video file and a corresponding JSON file of timestamps. The GUI allows users to smoothly and convincingly control the actions of a virtual person or thing on their webcam. I achieved this by writing a Linux Kernel Module (using V4l2 API) and corresponding a application (using Libav) to pipe video into a webcam device.} % Skills
   \vspace{1mm}
 %---------------------------------------------------------
 \cvskill
     {Masterlock Combo Solver} % Category
-    {Built a robot which is able to unlock any master combination lock and output its combination by designing a custom breadboard circuit, writing Arduino code, 3D printing a frame, and assembling together with motors.} % Skills
+    {Built a robot which is able to unlock any master combination lock in seconds and output its combination by designing a custom breadboard circuit, writing Arduino code, 3D printing a frame, and assembling together with motors.} % Skills
   \vspace{1mm}
 %---------------------------------------------------------
 \cvskill
