--- a/details/skills.tex
+++ b/details/skills.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cvskill
     {Programming Languages} % Category
-    {C/C++, JAVA, Python, Django, HTML/CSS, Javascript, LaTeX \newline
+    {C/C++, JAVA, Python, Django, Flask, HTML/CSS, Javascript, LaTeX, SQL \newline
     Solved hundreds of algorithm and security problems on PicoCTF, Project Euler, USACO, Codeforces, Google Foobar, etc.} % Skills
 
 %---------------------------------------------------------
