reworded projects and added GoGaucho

--- a/details/projects.tex
+++ b/details/projects.tex
@@ -12,24 +12,24 @@
 
   \vspace{1mm}
 %---------------------------------------------------------
-  \cvskill
+  \cvskill 
     {Linux Fake Webcam} % Category
     {Wrote a hacky program in C allowing users to impersonate anybody on webcam chat. The program inputs any video file and a corresponding JSON file of timestamps. The GUI allows users to smoothly and convincingly control the actions of a virtual person or thing on their webcam. I achieved this by writing a Linux Kernel Module (using V4l2 API) and corresponding a application (using Libav) to pipe video into a webcam device.} % Skills
   \vspace{1mm}
 %---------------------------------------------------------
+  \cvskill
+    {GoGaucho UCSB App} % Category
+    {Backend developer for iOS and Android app with 3000+ daily users. In charge of Python/Flask code that scrapes UCSB's class registration website, as well as scraping Shuttle Live Locations for convenient access inside the App.} % Skills
+%---------------------------------------------------------
 \cvskill
-    {Masterlock Combo Solver} % Category
-    {Built a robot which is able to unlock any master combination lock in seconds and output its combination by designing a custom breadboard circuit, writing Arduino code, 3D printing a frame, and assembling together with motors.} % Skills
+    {Masterlock Solver Bot} % Category
+    {Built a robot which is able to unlock any master combination lock in seconds and output its combination. I designed a custom breadboard circuit, wrote Arduino code, 3D printed a frame, and assembled together with motors.} % Skills
   \vspace{1mm}
 %---------------------------------------------------------
 \cvskill
   {Neural Network Game Bot}
-  {Developed an AI player in Javascript using neural networks and evolutionary learning algorithms. The bot teaches itself how to complete any level of a platformer game (similar to mario) given only the game controls and end destination.}
+  {Developed an AI player in Javascript using neural networks and evolutionary learning algorithms. The bot learns how to complete any level of a platformer game (similar to mario) given only the game controls and end destination.}
   \vspace{1mm}
-%---------------------------------------------------------
-  \cvskill
-    {Django Database \& Website} % Category
-    {Created a large database web application in Django used by Albany High School to organize annual freshmen debates.} % Skills
 %---------------------------------------------------------
   \cvskill
     {LISP interpreter in SNAP} % Category
