fixed a typo in linux fake webcam

--- a/details/projects.tex
+++ b/details/projects.tex
@@ -14,7 +14,7 @@
 %---------------------------------------------------------
   \cvskill 
     {Linux Fake Webcam} % Category
-    {Wrote a hacky program in C allowing users to impersonate anybody on webcam chat. The program inputs any video file and a corresponding JSON file of timestamps. The GUI allows users to smoothly and convincingly control the actions of a virtual person or thing on their webcam. I achieved this by writing a Linux Kernel Module (using V4l2 API) and corresponding a application (using Libav) to pipe video into a webcam device.} % Skills
+    {Wrote a hacky program in C allowing users to impersonate anybody on webcam chat. The program inputs any video file and a corresponding JSON file of timestamps. The GUI allows users to smoothly and convincingly control the actions of a virtual person or thing on their webcam. I achieved this by writing a Linux Kernel Module (using V4l2 API) and a corresponding application (using Libav) to pipe video into a webcam device.} % Skills
   \vspace{1mm}
 %---------------------------------------------------------
   \cvskill
