fixed address in resume, started coverletter

--- a/coverletter.tex
+++ b/coverletter.tex
@@ -54,17 +54,15 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 %\photo[circle,noedge,left]{./examples/profile}
 
-\name{}{\large Khaled Z. Ibrahim}
-\position{Computer Scientist{\enskip\cdotp\enskip}Computational Research
-Division{\enskip\cdotp\enskip} Lawrence Berkeley National Laboratory}
-\address{
-One Cyclotron Road, 059-4024N, M/S 59R4104, Berkeley, CA 94720}
+\name{}{\large Seif Ibrahim}
+\position{Computer Science Student{\enskip\cdotp\enskip} UC Santa Barbara}
+\address{6850 El Colegio Rd APT \#9406, Santa Barbara, CA 93117}
 
-\mobile{(510)679-9139}
-\email{kzibrahim@lbl.gov}
-\homepage{crd.lbl.gov/departments/computer-science/CLaSS/staff/khaled-ibrahim}
-%\github{posquit0}
-%\linkedin{posquit0}
+\mobile{(510)612-0049}
+\email{seifibrahim10@gmail.com}
+\github{seifibrahim}
+\linkedin{seif-ibrahim-71475b163}
+%\homepage{crd.lbl.gov/departments/computer-science/CLaSS/staff/khaled-ibrahim}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -81,19 +79,19 @@ One Cyclotron Road, 059-4024N, M/S 59R4104, Berkeley, CA 94720}
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Computer Scientist Hiring Committee}
-  {2575 Sand Hill Road, Menlo Park, CA 94025}
+  {Apple}
+%{2575 Sand Hill Road, Menlo Park, CA 94025}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
 %\lettertitle{Job Application for Software Engineer}
 
 % How the letter is opened
-\letteropening{Dear SLAC hiring committee,}
+\letteropening{Dear Apple hiring committee,}
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
-\letterenclosure[Attached]{Curriculum Vitae, Research Statement}
+\letterenclosure[Attached]{Curriculum Vitae}
 
 
 %-------------------------------------------------------------------------------
@@ -107,7 +105,7 @@ One Cyclotron Road, 059-4024N, M/S 59R4104, Berkeley, CA 94720}
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Khaled Z. Ibrahim~~~·~~~Cover Letter}
+  {Seif Ibrahim~~~·~~~Cover Letter}
   {}
 
 % Print the title with above letter informations
@@ -118,59 +116,10 @@ One Cyclotron Road, 059-4024N, M/S 59R4104, Berkeley, CA 94720}
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am submitting my resume and research statement for your consideration for the 
-computer scientist/senior scientist position (Job \#: 2157).
-Currently, I am a tenured computer scientist at Lawrence Berkeley
-National Laboratory in the Computer Languages \& Systems Software
-(CLaSS) Group,  and an affiliate of the computer architecture (CAG) and the
-performance and algorithm (PAR) groups.
+I am submitting my resume and application for your consideration for the
+SoC System Level Test Engineer Intern Currently position.
+Currently, I am a Computer Science Student in UC Santa Barbara's College of Creative Studies \em a small class (of about 6 people) on an accelerated track through Computer Science curriculum and research.
 
-My research interests include both basic computer science (parallel
-architecture and runtime systems) and  
-cross-disciplinary activities, such as optimizing simulation codes of quantum chromodynamics
-simulation, turbulence in plasma
-fusion, and  quantum chemistry using tensor contractions. 
-
-For performance analysis and
-tuning research, I targeted multi/many-core architectures (e.g., Intel Haswell, Intel KNC/KNL),
-GPU-accelerated architectures (e.g., nVidia GPUs), and light-weight
-many-core architectures (e.g., IBM BGQ). 
-Moreover, I  contributed to optimizing communication runtimes including
-MPI and GASNet,  improving their performance on many-core architectures and virtual computing
-environments. I conducted research in
-architecting power-efficient embedded designs and high-performance
-speculation mechanisms for parallel processing.
-
-In addition to best paper awards, I won the HPC Challenge Award for the best FFT performance on 49K cores
-Mira in Supercomputing 2014 (runner up for GUPS and HPL),  and two
-top-ten positions in Graph500 in
-Supercomputing 2016. I helped develop and 
-scale plasma turbulence simulation to 98K cores and scaled coupled cluster
-(CCSD) computation to tens of thousands of cores. 
-Leveraging years of research in parallel architectures, runtime systems, and application
-performance tuning, I adopt cross-layer optimization strategies to push the performance
-boundary on extreme-scale   supercomputers.  
-
-%and I am a believer of cross-layer optimization strategies for best
-%performance and efficiency.
-
-
-By joining SLAC, I aim  to advance the computational performance and efficiency in future
-exascale computing systems in various scientific research disciplines, 
-including elementary particle physics, and astrophysics and cosmology. I have always had  the aspiration for
-putting computational resources as a vehicle for scientific discoveries.
-
-I believe the post-Moore's law computing era will significantly impact HPC
-computing. Specifically, current  trends for constructing efficient
-architectures would significantly influence the strategies for scientific code development. 
-In my research statement, I share my views on how to achieve
-and maintain leadership in scientific discoveries in the exascale era and beyond. 
-
-I would be glad to provide further details if my skills match the position. 
-{\bf I also hope  to maintain confidentiality in processing my
-application.} 
-
-%Thank you for considering my application,
 
 \end{cvletter}
 
