--- a/cv.tex
+++ b/cv.tex
@@ -58,7 +58,7 @@
 \name{Seif}{Ibrahim}
 \position{Freshman Computing Student{\enskip\cdotp\enskip}University of Santa Barbara
 {\enskip\cdotp\enskip} CA }
-\address{545 Pierce Street, Apt 3101, Albany, CA 94706 }
+\address{6850 El Colegio Rd APT \#9406, Santa Barbara, CA 93117}
 
 \mobile{(510)612-0049}
 \email{seifibrahim10@gmail.com}
