finished apple coverletter and modified makefile to support multiple coverletters

--- a/coverletters/apple_coverletter.tex
+++ b/coverletters/apple_coverletter.tex
@@ -79,12 +79,14 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Apple}
-%{2575 Sand Hill Road, Menlo Park, CA 94025}
+{Apple Hiring Committe}
+{Apple Inc. \\
+One Infinite Loop \\
+Cupertino, CA 95014}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-%\lettertitle{Job Application for Software Engineer}
+%\lettertitle{Cover Letter for SoC Internship}
 
 % How the letter is opened
 \letteropening{Dear Apple hiring committee,}
@@ -106,21 +108,27 @@
 \makecvfooter
   {\today}
   {Seif Ibrahim~~~·~~~Cover Letter}
-  {}
+  {\mbox{}}
 
 % Print the title with above letter informations
-\makelettertitle
+  \makelettertitle
 
 %-------------------------------------------------------------------------------
 %	LETTER CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am submitting my resume and application for your consideration for the
-SoC System Level Test Engineer Intern Currently position.
-Currently, I am a Computer Science Student in UC Santa Barbara's College of Creative Studies \em a small class (of about 6 people) on an accelerated track through Computer Science curriculum and research.
+I am submitting my resume and application for your consideration for the SoC System Level Test Engineer Intern position. When I learned of your opening for the system-on-chip position, I felt compelled to send in my application. With my 5+ years of experience in C/C++ and work with microcontrollers, I am confident my skills will be of benefit to Apple's mission to build high-performance and elegant processors. 
 
+Currently, I am a Computer Science Student in UC Santa Barbara's College of Creative Studies --- a small class (of about 6 people) on an accelerated track through Computer Science curriculum and research. I am looking to gain work experience in Computer Science at Apple this summer. 
 
+I am obsessed with the elegant, simple, and fast. My favorite programming language is C. I am an avid ViM nerd and Debian Linux user. My understanding of computers extends below the level of the compiler and operating system; as a result, I've participated in CTF challenges and written device drivers for Linux requiring an understanding of memory layout and machine code. Solving online algorithm challenges on USA Computing Olympiad, Project Euler, CodeChef, etc. is one of my favorite pastimes --- to the point that my friends and family can't understand how I can spend hours writing and debugging the same program without getting frustrated. 
+
+My experience also extends to working with robotics and microcontrollers. As president of my high school's robotics club, I wrote most of the software for the Arduino and Beaglebone microcontrollers that run the robot. I was able to lead my team to victory in a high-pressure competition environment, as well as develop my leadership and teamwork skills. I have also worked on personal projects involving programming and debugging Arduino C code --- these are detailed in my resume. With my years of experience in just writing and debugging code, I have established a natural workflow which allows to find and fix errors very quickly and makes writing code more intuitive to me. This is an advantage that I have noticed, has propelled me over many of classmates.
+
+With my technical skills and my deep interest in high-performance and low-level systems, I believe that I could quickly surpass your expectations as an intern at Apple. I urge you to take a look at my resume.
+
+Thank you for your consideration.
 \end{cvletter}
 
 
