changed email to ucsb, fixed lisp project description, reversed promys and python bootcamp, made quote more humble

--- a/cv.tex
+++ b/cv.tex
@@ -61,7 +61,7 @@
 \address{6850 El Colegio Rd APT \#9406, Santa Barbara, CA 93117}
 
 \mobile{(510)612-0049}
-\email{seifibrahim10@gmail.com}
+\email{seifibrahim@ucsb.edu}
 %\homepage{}
 \github{seifibrahim}
 \linkedin{seif-ibrahim-71475b163}
@@ -72,7 +72,7 @@
 % \reddit{reddit-id}
 %\extrainfo{https://www.researchgate.net/profile/Khaled\_Ibrahim6}
 
-\quote{``A motivated computer scientist and ViM nerd with 5+ years of experience who is obsessed with high-performance code/algorithms and enjoys building personal projects and hacks in C/C++. I am looking to utilize and develop my skills at a Computer Science internship."}
+\quote{``A motivated computer science student and ViM nerd with 5+ years of experience who is obsessed with high-performance code/algorithms and enjoys building personal projects and hacks in C/C++. I am looking to utilize and develop my skills at a Computer Science internship."}
 
 
 %-------------------------------------------------------------------------------
