--- a/details/honors.tex
+++ b/details/honors.tex
@@ -19,31 +19,31 @@
   \cvhonor
     {USA Computing Olympiad (USACO)} % Award
     {Platinum Division in Algorithms and Data Competition (top 5\% nationally)}
-    {California, US} % Location
+    {USA} % Location
     {2016-18} % Date(s)
     
   \cvhonor
     {1st Place Award PiE Robotics Competition at UC Berkeley}  % Award
     {First Place Award and Software/Sensors Award out of 30+ schools. As president of Robotics Club, I trained a team in different areas of STEM, and lead them to victory in competition. I gained skills in wiring and programming Arduinos, Beaglebones, and reading hardware specs.}
-    {California, US} % Location
+    {California, USA} % Location
     {2017-18} % Date(s)
 
   \cvhonor
     {Moody Mega Math Modeling Challenge} % Award
     {Data Modeling Paper Award and \$1000 Scholarship (top 8\% nationally)}
-    {California, US} % Location
+    {USA} % Location
     {2017-18} % Date(s)
  
   \cvhonor
     {Bay Area Mathletes} % Award
     {Undefeated Math Team in competition with all Bay Area high schools}
-    {California, US} % Location
+    {California, USA} % Location
     {2016-17} % Date(s)
 
   \cvhonor
     {The National French Contest (Le Grand Concours)} % Award
     {Gold Medal (top 5\% nationally)}
-    {California, US} % Location
+    {USA} % Location
     {2016-17} % Date(s)
       
 \end{cvhonors}
