--- a/details/projects.tex
+++ b/details/projects.tex
@@ -33,7 +33,7 @@
 %---------------------------------------------------------
   \cvskill
     {LISP interpreter in SNAP} % Category
-    {Designed an interpreter for LISP on top of SNAP (a visual programming language) in a clever attempt to loophole the requirement of using a visual language for in-class projects, and instead using a written language.} % Skills
+    {Designed an interpreter for LISP in SNAP (a visual programming language) in an attempt to loophole the requirement of using a visual language for in-class projects by instead using the LISP written language.} % Skills
   \vspace{1mm}
 
 \end{cvskills}
