--- a/details/education.tex
+++ b/details/education.tex
@@ -18,21 +18,11 @@
     \begin{cvitems}
     %\item GPA: N/A 
     \item \textbf{Relevant Coursework:} Algorithms and Data Structures in C++, Unix Operating Systems Lab, Mathematics of Computer Science (Discrete Math \& Probability), Linear Algebra, Calculus III Multivariable Calculus.
-    \item \textbf{Standardized Tests - SAT: 1530/1600, SAT Math II: 800/800, AP Computer Science A: 5}
+    \item \textbf{Standardized Tests - SAT Math II: 800/800, AP Computer Science A: 5}
     \item \textbf{1 of 6 freshmen} chosen to pursue research and an accelerated Computer Science courseload in College of Creative Studies.
     \end{cvitems}
     }
 
- \cventry
-    {Python Data Science and Web Development Certificate} % Degree
-    {Python Boot Camp at UC Berkeley} % Institution
-    {Berkeley, California} % Location
-    {2016} % Date(s)    
-    {
-      \begin{cvitems}
-      \item Python Boot Camp: A rigorous course in the Python Scripting Language covering website backends(Django), data processing libraries (NumPy, pandas, SciPy, etc.), and Git version control.
-      \end{cvitems}
-      }
 
     \cventry
     {Certificate of Completion (Clay Mathematics Institute)} % Degree
@@ -45,6 +35,17 @@
     \end{cvitems}
     }
 
+
+ \cventry
+    {Python Data Science and Web Development Certificate} % Degree
+    {Python Boot Camp at UC Berkeley} % Institution
+    {Berkeley, California} % Location
+    {2016} % Date(s)    
+    {
+      \begin{cvitems}
+      \item Python Boot Camp: A rigorous course in the Python Scripting Language covering website backends(Django), data processing libraries (NumPy, pandas, SciPy, etc.), and Git version control.
+      \end{cvitems}
+      }
 
 \iffalse
   \cventry
