moved a word in lisp project description

--- a/details/projects.tex
+++ b/details/projects.tex
@@ -33,7 +33,7 @@
 %---------------------------------------------------------
   \cvskill
     {LISP interpreter in SNAP} % Category
-    {Designed an interpreter for LISP in SNAP (a visual programming language) in an attempt to loophole the requirement of using a visual language for in-class projects by instead using the LISP written language.} % Skills
+    {Designed an interpreter for LISP in SNAP (a visual programming language) in an attempt to loophole the requirement of using a visual language for in-class projects by using the LISP written language instead.} % Skills
   \vspace{1mm}
 
 \end{cvskills}
