added playstation coverletter

--- a/coverletters/playstation_coverletter.tex
+++ b/coverletters/playstation_coverletter.tex
@@ -79,17 +79,16 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-{Apple Hiring Committe}
-{Apple Inc. \\
-One Infinite Loop \\
-Cupertino, CA 95014}
+{PlayStation Hiring Committe}
+{PlayStation Inc. \\
+San Francisco, CA}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
 %\lettertitle{Cover Letter for SoC Internship}
 
 % How the letter is opened
-\letteropening{Dear Apple hiring committee,}
+\letteropening{Dear PlayStation hiring committee,}
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
@@ -118,15 +117,15 @@ Cupertino, CA 95014}
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am submitting my resume and application for your consideration for the SoC System Level Test Engineer Intern position. When I learned of your opening for the system-on-chip position, I felt compelled to send in my application. With my 5+ years of experience in C/C++ and work with microcontrollers, I am confident my skills will be of benefit to Apple's mission to build high-performance and elegant processors. 
+I am submitting my resume and application for your consideration for the Software Engineering Intern position. When I learned of this opportunity, I felt compelled to send in my application. With my 5+ years of experience in C/C++ and Java, I am confident my skills will be of benefit to PlayStation's mission to build the world's leading entertainment platform. 
 
-Currently, I am a Computer Science Student in UC Santa Barbara's College of Creative Studies --- a small class (of about 6 people) on an accelerated track through Computer Science curriculum and research. I am looking to gain work experience in Computer Science at Apple this summer. 
+Currently, I am a Computer Science Student in UC Santa Barbara's College of Creative Studies --- a small class (of about 6 people) on an accelerated track through Computer Science curriculum and research. I am looking to gain work experience in Computer Science at PlayStation this summer. My interests range from game development to high-performance computing and cybersecurity. 
 
-I am obsessed with the elegant, simple, and fast. My favorite programming language is C. I am an avid ViM nerd and Debian Linux user. My understanding of computers extends below the level of the compiler and operating system; as a result, I've participated in CTF challenges and written device drivers for Linux requiring an understanding of memory layout and machine code. Solving online algorithm challenges on USA Computing Olympiad, Project Euler, CodeChef, etc. is one of my favorite pastimes --- to the point that my friends and family can't understand how I can spend hours writing and debugging the same program without getting frustrated. 
+My interest in computer science stemmed from a desire to build video games. Java was the first programming language I taught myself in order to write mods for Minecraft. In middle school, I worked on my own small games in C++ after reading several books on the topic. I have a good grasp of how Object Oriented code works in practice from reading and modifying the code for those games which are open source.
 
-My experience also extends to working with robotics and microcontrollers. As president of my high school's robotics club, I wrote most of the software for the Arduino and Beaglebone microcontrollers that run the robot. I was able to lead my team to victory in a high-pressure competition environment, as well as develop my leadership and teamwork skills. I have also worked on personal projects involving programming and debugging Arduino C code --- these are detailed in my resume. With my years of experience in just writing and debugging code, I have established a natural workflow which allows to find and fix errors very quickly and makes writing code more intuitive to me. This is an advantage that I have noticed, has propelled me over many of classmates.
+In high school, I worked with a classmate in my Web Development class to create an online platformer game, similar to Mario, using Javascript and PHP. With enough of the game completed, I wrote an AI player (also in Javascript) using Neural Networks which I trained through a neuro-evolutionary algorithm known as NEAT. The algorithm works by generating, mutating, cross-breeding and selecting neural networks based on their ``fitness'' in solving the level --- very similar to evolution in nature. The player was able to learn by itself how to complete a level without dying with the only inputs being the map of the level, the destination it should try to get to, and the controls to the game. This project was very exciting when the computer was able to complete a level which is hard even for human players. I have always enjoyed working on game-related projects from the beginning of my computer science career until now.
 
-With my technical skills and my deep interest in high-performance and low-level systems, I believe that I could quickly surpass your expectations as an intern at Apple. I urge you to take a look at my resume.
+With my technical skills and my deep passion for video game programming, I believe that I could quickly surpass your expectations as an intern at PlayStation. I urge you to take a look at my resume.
 
 Thank you for your consideration.
 \end{cvletter}
