--- a/cv.tex
+++ b/cv.tex
@@ -56,7 +56,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo{./examples/profile.png}
 \name{Seif}{Ibrahim}
-\position{Freshman Computing Student{\enskip\cdotp\enskip}University of Santa Barbara
+\position{Freshman Computing Student{\enskip\cdotp\enskip}University of California, Santa Barbara
 {\enskip\cdotp\enskip} CA }
 \address{6850 El Colegio Rd APT \#9406, Santa Barbara, CA 93117}
 
