corrected university name in education section

--- a/details/education.tex
+++ b/details/education.tex
@@ -11,7 +11,7 @@
 %---------------------------------------------------------
   \cventry
   {Computer Science BS, College of Creative Studies (CCS)} % Degree
-    {University of Santa Barbara California} % Institution
+    {University of California, Santa Barbara} % Institution
     {Santa Barbara, California} % Location
     {2018-2022} % Date(s)    
     {
