added GPA, removed standardized tests

--- a/details/education.tex
+++ b/details/education.tex
@@ -16,9 +16,9 @@
     {2018-2022} % Date(s)    
     {
     \begin{cvitems}
-    %\item GPA: N/A 
+    \item \textbf{GPA: 4.00} 
     \item \textbf{Relevant Coursework:} Algorithms and Data Structures in C++, Unix Operating Systems Lab, Mathematics of Computer Science (Discrete Math \& Probability), Linear Algebra, Calculus III Multivariable Calculus.
-    \item \textbf{Standardized Tests - SAT Math II: 800/800, AP Computer Science A: 5}
+    %\item \textbf{Standardized Tests - SAT Math II: 800/800, AP Computer Science A: 5}
     \item \textbf{1 of 6 freshmen} chosen to pursue research and an accelerated Computer Science courseload in College of Creative Studies.
     \end{cvitems}
     }
