edited GoGaucho description

--- a/details/projects.tex
+++ b/details/projects.tex
@@ -19,7 +19,7 @@
 %---------------------------------------------------------
   \cvskill
     {GoGaucho UCSB App} % Category
-    {Backend developer for iOS and Android app with 3000+ daily users. In charge of Python/Flask code that scrapes UCSB's class registration website, as well as scraping Shuttle Live Locations for convenient access inside the App.} % Skills
+    {Backend developer for iOS and Android app with 3000+ daily users. In charge of Node.js code for authentication and scraping UCSB's class registration website, as well as Shuttle Live Locations for convenient access inside the App.} % Skills
 %---------------------------------------------------------
 \cvskill
     {Masterlock Solver Bot} % Category
